# vino

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  debug.h  error.h  hello.cgi  http_epoll.c  http_epoll.h  http_headers_parser.c  http_headers_parser.h  http_request.c  http_request.h  index.html  rio.c  rio.h  socketlib.c  socketlib.h  socklib.c  socklib.h  threadpool.c  threadpool.h  tinyhttpd  tinyhttpd.c  tinyhttpd.conf  tinyhttpd.h  util.c  util.h  vino.c  vino.h  vn_epoll.c  vn_request.c
cgi-bin/: calculator.sh  env.sh  myscript.cgi  myscript.sh
doc/: index.html
docs/: 如何实现一个Web Server.md
html/: index.html
resources/: http_headers.txt  index.html  index.html~
src/: error.c  error.h  rio.c  rio.h  socketlib.c  socketlib.h  thread_pool.c  thread_pool.h  thread_pool_logger.h  util.c  util.h  vino.c  vino.conf  vino.h  vn_alloc.c  vn_alloc.h  vn_epoll.c  vn_epoll.h  vn_error.c  vn_error.h  vn_event_timer.c  vn_event_timer.h  vn_hashmap.c  vn_hashmap.h  vn_http_parse.c  vn_http_parse.h  vn_linked_list.c  vn_linked_list.h  vn_linkedlist.c  vn_linkedlist.h  vn_logger.c  vn_logger.h  vn_palloc.c  vn_palloc.h  vn_priority_queue.c  vn_priority_queue.h  vn_request.c  vn_request.h  vn_socketlib.c  vn_socketlib.h
test/: cinclude2dot.pl  get_request  vn_get_mime_type_test.c  vn_linked_list_test.c  vn_parse_config_test.c  vn_priority_queue_test.c  vn_request_test.c  vn_str_cmp_test.c
tests/: directory_or_file.c  file_exist.c  http_get_request_static  http_post_request  http_request_headers_dynamic  is_dynamic.c  is_readable.c  list_files.c  poll_pipes.c  (+6 more)
